# Touhou_-1_Rust

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
assets/: dialogue.ron  enemies.ron
src/: background.rs  boss.rs  components.rs  constants.rs  discussion.rs  enemy.rs  level.rs  main.rs  pause.rs  paused.rs  player.rs  projectile.rs  ui.rs
