[package]
name = "touhou_-1_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.17.2", features = ["dynamic_linking"] }
futures-lite = "2.6.1"
rand = "0.8"
ron = "0.12.0"
serde = "1.0.228"
